--- a/referencias.html
+++ b/referencias.html
@@ -7,6 +7,7 @@
  		<script src="myscripts.js"></script>
  		<!-- Set character set to display latin characters -->
  		<meta charset="UTF-8">
+ 		 <link href="style.css" rel="stylesheet">
 
  		<!-- Set author -->
  		 <meta name="author" content="Group 8">
