--- a/execucao.html
+++ b/execucao.html
@@ -7,6 +7,7 @@
  		<script src="myscripts.js"></script>
  		<!-- Set character set to display latin characters -->
  		<meta charset="UTF-8">
+ 		 <link href="style.css" rel="stylesheet">
 
  		<!-- Set author -->
  		 <meta name="author" content="Group 8">
@@ -19,48 +20,28 @@
 		<!-- 
 			Tópicos: Introdução, estrutura, narrativa, exemplos clássicos, erros (no meio da narrativa)
 		-->
-		<div class="container" style="width: 90%">
+		<div class="container main" style="width: 90%">
 			<div class="row">
 				<center>
 					<div class="jumbotron">
 						<!-- SECTION TITLE -->
-						<h2>Bibliotecas de execução</h2>
+						<h2>Execução</h2>
 					</div>
 				</center>
 			</div>
 			<div class="row">
 				<!-- MAIN NAVIGATION TAB -->
-				<div class="col-sm-2">
-					<nav class="container-fluid">
-						<ul class="nav navbar-nav">
-							<li><a href="index.html">O que é o OpenMP?</a></li>
-							<br>
-
-							<li><a href="tudo_pronto.html">Tudo pronto?</a></li>
-							<br>
-
-							<li><a href="diretivas.html">Diretivas</a></li>
-							<br>
-
-							<li><a href="clausulas.html">Cláusulas</a></li>
-							<br>
-
-							<li class="active"><a href="execucao.html">Bibliotecas de execução</a></li>
-							<br>
-
-							<li><a href="variaveis.html">Variáveis de ambiente</a></li>
-							<br>
-
-							<li><a href="exemplos.html">Exemplos clássicos</a></li>
-							<br>
-
-							<li><a href="erros.html">Erros frequentes</a></li>
-							<br>
-						</ul>
-					</nav>
-				</div>
+  	<div class="sidenav">
+    <a href="index.html">O que é o OpenMP?</a>
+    <a href="tudo_pronto.html">Tudo pronto?</a>
+    <a href="diretivas.html">Diretivas</a>
+    <a href="clausulas.html">Cláusulas</a>
+    <a href="execucao.html">Bibliotecas de execução</a>
+    <a href="variaveis.html">Variáveis de ambiente</a>
+    <a href="exemplos.html">Exemplos clássicos</a>
+  </div>
 				<!-- SECTION CONTENT -->
-				<div class="col-sm-14">
+				<div class="main">
 					<p>
 						OpenMP fornece várias bibliotecas com rotinas para ajudá-lo a gerir o seu programa em modo paralelo. Como por exemplo verificar, determinar o número de threads, funções de bloqueio, cronometragem, etc...
 					</p>
